# my_sockets

./: .clang-format  .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  main.cpp  msg_server.cpp  my_sockets_tdd  my_sockets_tdd.cbp  socktdd.cpp
Cevelop/.metadata/: version.ini
Cevelop/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Cevelop/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Cevelop/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Cevelop/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Creator/build-my_sockets-Desktop-Debug/: Makefile  my_sockets
Creator/build-my_sockets-Desktop_Qt_5_15_1_GCC_64bit-Debug/: Makefile  my_sockets
Creator/build-my_sockets-Desktop_clang-Debug/: .qmake.stash  Makefile  my_sockets
Creator/build-my_sockets-clang10-Debug/: Makefile  my_sockets
Creator/my_sockets/: my_sockets.pro
MSVC/my_sockets/: my_sockets.sln
MSVC/my_sockets/my_sockets/: my_sockets.vcxproj  my_sockets.vcxproj.filters
MSVC/my_sockets/my_sockets/Debug/: my_sockets.exe.recipe  socktdd.obj.enc  vc142.idb
MSVC/my_sockets/my_sockets/Debug/my_sockets.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  (+3 more)
Testing/: TAG
Testing/20200930-0604/: Update.xml
include/my/: my_linux_sockets_includes.hpp  my_socket_errors  my_socket_errors.h  my_sockets  my_sockets.hpp  my_sockets_threaded.hpp  my_sockets_utils.h
